--- a/index.html
+++ b/index.html
@@ -11,33 +11,33 @@
     body{ font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,sans-serif; }
     .playfair{ font-family:'Playfair Display',serif; }
 
-    /* Background animation */
+    /* Background + Motion */
     .dot-grid{background-image:radial-gradient(circle at 2px 2px,rgba(255,255,255,.8)1px,transparent 0);background-size:40px 40px;opacity:.06}
     .grad-anim{background:linear-gradient(135deg,var(--ink),#0f2744 40%,var(--ink));background-size:200% 200%;animation:moveGrad 18s ease infinite}
     @keyframes moveGrad{0%{background-position:0% 50%}50%{background-position:100% 50%}100%{background-position:0% 50%}}
     .moving-orb{position:absolute;top:50%;left:50%;width:42rem;height:42rem;border-radius:50%;pointer-events:none;mix-blend-mode:screen;filter:blur(90px);background:radial-gradient(circle,rgba(112,243,255,.55),rgba(112,243,255,.25)40%,transparent 70%);animation:orbit 18s ease-in-out infinite}
     @keyframes orbit{0%{transform:translate(-50%,-50%)translate(0,-35%)}25%{transform:translate(-50%,-50%)translate(35%,0)}50%{transform:translate(-50%,-50%)translate(0,35%)}75%{transform:translate(-50%,-50%)translate(-35%,0)}100%{transform:translate(-50%,-50%)translate(0,-35%)}}
 
-    /* Animations */
+    /* Reveal */
     .reveal{opacity:0;transform:translateY(12px);transition:all .8s cubic-bezier(.2,.7,.2,1)}
     .reveal.show{opacity:1;transform:none}
 
     /* Buttons */
     .btn{position:relative;display:inline-flex;align-items:center;gap:.5rem;padding:.85rem 1.5rem;border-radius:1rem;font-weight:400;transition:transform .25s ease, box-shadow .35s ease, background .25s ease;cursor:pointer;overflow:hidden}
-    .btn::before{content:\"\";position:absolute;inset:0;background:linear-gradient(90deg,transparent,rgba(112,243,255,.35),transparent);transform:translateX(-120%);transition:transform .6s ease}
+    .btn::before{content:"";position:absolute;inset:0;background:linear-gradient(90deg,transparent,rgba(112,243,255,.35),transparent);transform:translateX(-120%);transition:transform .6s ease}
     .btn:hover::before{transform:translateX(120%)}
     .btn-primary{background:var(--ink);color:#fff;box-shadow:0 0 0 1px #fff2 inset}
     .btn-primary:hover{background:#102c57;box-shadow:0 0 18px rgba(112,243,255,.45)}
     .btn-outline{border:1px solid #ffffff33;color:#fff}
     .btn-outline:hover{background:rgba(255,255,255,.1);box-shadow:0 0 14px rgba(255,255,255,.3)}
 
-    /* Logo + floating */
+    /* Logo animation */
     .logo{border-radius:1.25rem;box-shadow:0 0 0 1px rgba(255,255,255,.14),0 10px 30px rgba(0,0,0,.25)}
     .logo-float{animation:float 8s ease-in-out infinite}
     @keyframes float{0%,100%{transform:translateY(0)}50%{transform:translateY(-6px)}}
     .logo:hover{filter:drop-shadow(0 0 12px rgba(112,243,255,.45))}
 
-    /* Cards */
+    /* Image cards */
     .img-card{border-radius:1.25rem;overflow:hidden;box-shadow:0 8px 30px rgba(2,6,23,.15);background:#f8fafc;display:flex;align-items:center;justify-content:center;min-height:280px;}
     .img-card img{width:100%;height:100%;object-fit:cover;transition:transform .8s cubic-bezier(.2,.7,.2,1)}
     .img-card:hover img{transform:scale(1.06)}
@@ -47,146 +47,145 @@
     .lead{color:#475569}
   </style>
 </head>
-
-<body class=\"bg-white text-slate-100\">
+<body class="bg-white text-slate-100">
   <!-- HERO -->
-  <section class=\"relative min-h-[100svh] flex items-center justify-center grad-anim overflow-hidden\">
-    <div class=\"absolute inset-0 dot-grid\"></div>
-    <div class=\"moving-orb\"></div>
-    <div class=\"relative z-10 text-center px-6 max-w-4xl\">
-      <img src=\"https://qtrypzzcjebvfcihiynt.supabase.co/storage/v1/object/public/base44-prod/public/user_69005f868b0ef0801df1105c/f5cf6384e_20251027_2247_LionLogoDesign_remix_01k8kfw9bzfb49srb2rxfm9f3f.png\" alt=\"Inspirus\" class=\"logo logo-float mx-auto w-44 md:w-56 mb-8\" />
-      <h1 class=\"playfair text-4xl md:text-5xl font-light leading-tight\">
+  <section class="relative min-h-[100svh] flex items-center justify-center grad-anim overflow-hidden">
+    <div class="absolute inset-0 dot-grid"></div>
+    <div class="moving-orb"></div>
+    <div class="relative z-10 text-center px-6 max-w-4xl">
+      <img src="https://qtrypzzcjebvfcihiynt.supabase.co/storage/v1/object/public/base44-prod/public/user_69005f868b0ef0801df1105c/f5cf6384e_20251027_2247_LionLogoDesign_remix_01k8kfw9bzfb49srb2rxfm9f3f.png" alt="Inspirus" class="logo logo-float mx-auto w-44 md:w-56 mb-8" />
+      <h1 class="playfair text-4xl md:text-5xl font-light leading-tight">
         A private family investment office dedicated to the prudent stewardship and growth of capital across generations.
       </h1>
-      <div class=\"mt-10 flex flex-wrap items-center justify-center gap-4\">
-        <a href=\"#contact\" class=\"btn btn-primary\">Get in touch</a>
-        <a href=\"#gallery\" class=\"btn btn-outline\">Explore</a>
+      <div class="mt-10 flex flex-wrap items-center justify-center gap-4">
+        <a href="#contact" class="btn btn-primary">Get in touch</a>
+        <a href="#gallery" class="btn btn-outline">Explore</a>
       </div>
     </div>
   </section>
 
   <!-- INVESTMENT APPROACH -->
-  <section id=\"approach\" class=\"section bg-white text-slate-900\">
-    <div class=\"container grid md:grid-cols-2 gap-10 items-center\">
+  <section id="approach" class="section bg-white text-slate-900">
+    <div class="container grid md:grid-cols-2 gap-10 items-center">
       <div>
-        <h2 class=\"playfair text-4xl md:text-5xl text-[var(--ink)] mb-6\">Investment Approach</h2>
-        <p class=\"reveal lead text-lg md:text-xl\">
+        <h2 class="playfair text-4xl md:text-5xl text-[var(--ink)] mb-6">Investment Approach</h2>
+        <p class="reveal lead text-lg md:text-xl">
           Inspirus Capital pursues a long-term, relationship-driven approach to investing across private equity, real estate, and strategic opportunities. We seek to partner with exceptional management teams and businesses that share our values of integrity, discipline, and enduring value creation.
         </p>
       </div>
-      <figure class=\"img-card reveal\">
-        <img src=\"https://images.unsplash.com/photo-1520607162513-77705c0f0d4a?w=1600&q=80&auto=format&fit=crop\" alt=\"City skyline\"/>
+      <figure class="img-card reveal">
+        <img src="https://images.unsplash.com/photo-1520607162513-77705c0f0d4a?w=1600&q=80&auto=format&fit=crop" alt="City skyline"/>
       </figure>
     </div>
   </section>
 
   <!-- GALLERY -->
-  <section id=\"gallery\" class=\"section bg-slate-50 text-slate-900\">
-    <div class=\"container grid md:grid-cols-3 gap-6\">
-      <figure class=\"img-card reveal\"><img src=\"https://images.unsplash.com/photo-1542744173-8e7e53415bb0?w=1400&q=80&auto=format&fit=crop\" alt=\"Private equity\"/></figure>
-      <figure class=\"img-card reveal\"><img src=\"https://images.unsplash.com/photo-1486325212027-8081e485255e?w=1400&q=80&auto=format&fit=crop\" alt=\"Real estate\"/></figure>
-      <figure class=\"img-card reveal\"><img src=\"https://images.unsplash.com/photo-1496307042754-b4aa456c4a2d?w=1400&q=80&auto=format&fit=crop\" alt=\"Strategic partnerships\"/></figure>
+  <section id="gallery" class="section bg-slate-50 text-slate-900">
+    <div class="container grid md:grid-cols-3 gap-6">
+      <figure class="img-card reveal"><img src="https://images.unsplash.com/photo-1542744173-8e7e53415bb0?w=1400&q=80&auto=format&fit=crop" alt="Private equity"/></figure>
+      <figure class="img-card reveal"><img src="https://images.unsplash.com/photo-1486325212027-8081e485255e?w=1400&q=80&auto=format&fit=crop" alt="Real estate"/></figure>
+      <figure class="img-card reveal"><img src="https://images.unsplash.com/photo-1496307042754-b4aa456c4a2d?w=1400&q=80&auto=format&fit=crop" alt="Strategic partnerships"/></figure>
     </div>
   </section>
 
   <!-- PHILANTHROPY -->
-  <section id=\"philanthropy\" class=\"section bg-white text-slate-900\">
-    <div class=\"container grid md:grid-cols-2 gap-10 items-center\">
+  <section id="philanthropy" class="section bg-white text-slate-900">
+    <div class="container grid md:grid-cols-2 gap-10 items-center">
       <div>
-        <h2 class=\"playfair text-4xl md:text-5xl text-[var(--ink)] mb-6\">Philanthropy</h2>
-        <p class=\"reveal lead text-lg md:text-xl\">
+        <h2 class="playfair text-4xl md:text-5xl text-[var(--ink)] mb-6">Philanthropy</h2>
+        <p class="reveal lead text-lg md:text-xl">
           Philanthropy is a core part of our purpose. We support initiatives in education, healthcare, and community development, striving to make a positive and lasting contribution to society.
         </p>
       </div>
-      <figure class=\"img-card reveal\">
-        <img src=\"https://images.unsplash.com/photo-1488521787991-ed7bbaae773c?w=1600&q=80&auto=format&fit=crop\" alt=\"Community\"/>
+      <figure class="img-card reveal">
+        <img src="https://images.unsplash.com/photo-1488521787991-ed7bbaae773c?w=1600&q=80&auto=format&fit=crop" alt="Community"/>
       </figure>
     </div>
   </section>
 
   <!-- PRINCIPLES -->
-  <section id=\"principles\" class=\"section bg-slate-50 text-slate-900\">
-    <div class=\"container grid md:grid-cols-2 gap-10 items-center\">
+  <section id="principles" class="section bg-slate-50 text-slate-900">
+    <div class="container grid md:grid-cols-2 gap-10 items-center">
       <div>
-        <h2 class=\"playfair text-4xl md:text-5xl text-[var(--ink)] mb-6\">Our Principles</h2>
-        <p class=\"reveal lead text-lg md:text-xl\">
+        <h2 class="playfair text-4xl md:text-5xl text-[var(--ink)] mb-6">Our Principles</h2>
+        <p class="reveal lead text-lg md:text-xl">
           Our work is guided by the principles of responsibility, sustainability, and family legacy, ensuring that every investment and philanthropic effort aligns with our long-term vision.
         </p>
       </div>
-      <figure class=\"img-card reveal\">
-        <img src=\"https://images.unsplash.com/photo-1497366216548-37526070297c?w=1600&q=80&auto=format&fit=crop\" alt=\"Office\"/>
+      <figure class="img-card reveal">
+        <img src="https://images.unsplash.com/photo-1497366216548-37526070297c?w=1600&q=80&auto=format&fit=crop" alt="Office"/>
       </figure>
     </div>
   </section>
 
   <!-- CONTACT -->
-  <section id=\"contact\" class=\"section bg-slate-950 text-slate-100 overflow-hidden\">
-    <div class=\"container grid lg:grid-cols-2 gap-12 items-start\">
-      <div class=\"reveal\">
-        <h2 class=\"playfair text-4xl md:text-5xl\">Get in touch</h2>
-        <p class=\"mt-4 text-slate-300 text-lg\">For further information please contact us here.</p>
+  <section id="contact" class="section bg-slate-950 text-slate-100 overflow-hidden">
+    <div class="container grid lg:grid-cols-2 gap-12 items-start">
+      <div class="reveal">
+        <h2 class="playfair text-4xl md:text-5xl">Get in touch</h2>
+        <p class="mt-4 text-slate-300 text-lg">For further information please contact us here.</p>
       </div>
-      <form id=\"contactForm\" class=\"reveal bg-white/10 rounded-2xl p-8 ring-1 ring-white/10 backdrop-blur-sm\" novalidate>
-        <div class=\"grid md:grid-cols-2 gap-6\">
+      <form id="contactForm" class="reveal bg-white/10 rounded-2xl p-8 ring-1 ring-white/10 backdrop-blur-sm" novalidate>
+        <div class="grid md:grid-cols-2 gap-6">
           <div>
-            <label class=\"text-sm text-slate-300\">Name</label>
-            <input name=\"name\" required placeholder=\"Jane Doe\" class=\"mt-2 w-full rounded-xl bg-white/5 px-4 py-3 ring-1 ring-white/10 focus:ring-2 focus:ring-[var(--neon)] outline-none\" />
+            <label class="text-sm text-slate-300">Name</label>
+            <input name="name" required placeholder="Jane Doe" class="mt-2 w-full rounded-xl bg-white/5 px-4 py-3 ring-1 ring-white/10 focus:ring-2 focus:ring-[var(--neon)] outline-none" />
           </div>
           <div>
-            <label class=\"text-sm text-slate-300\">Email</label>
-            <input name=\"email\" type=\"email\" required placeholder=\"jane@example.com\" class=\"mt-2 w-full rounded-xl bg-white/5 px-4 py-3 ring-1 ring-white/10 focus:ring-2 focus:ring-[var(--neon)] outline-none\" />
+            <label class="text-sm text-slate-300">Email</label>
+            <input name="email" type="email" required placeholder="jane@example.com" class="mt-2 w-full rounded-xl bg-white/5 px-4 py-3 ring-1 ring-white/10 focus:ring-2 focus:ring-[var(--neon)] outline-none" />
           </div>
         </div>
-        <div class=\"mt-6\">
-          <label class=\"text-sm text-slate-300\">Message</label>
-          <textarea name=\"message\" rows=\"6\" required placeholder=\"Write your message...\" class=\"mt-2 w-full rounded-xl bg-white/5 px-4 py-3 ring-1 ring-white/10 focus:ring-2 focus:ring-[var(--neon)] outline-none resize-none\"></textarea>
+        <div class="mt-6">
+          <label class="text-sm text-slate-300">Message</label>
+          <textarea name="message" rows="6" required placeholder="Write your message..." class="mt-2 w-full rounded-xl bg-white/5 px-4 py-3 ring-1 ring-white/10 focus:ring-2 focus:ring-[var(--neon)] outline-none resize-none"></textarea>
         </div>
-        <button type=\"submit\" class=\"btn btn-primary mt-6 w-full justify-center\" id=\"sendBtn\">Send Message</button>
-        <p id=\"statusMsg\" class=\"mt-3 text-center text-sm\"></p>
+        <button type="submit" class="btn btn-primary mt-6 w-full justify-center" id="sendBtn">Send Message</button>
+        <p id="statusMsg" class="mt-3 text-center text-sm"></p>
       </form>
     </div>
   </section>
 
   <!-- FOOTER -->
-  <footer class=\"py-10 px-6 bg-slate-950 text-slate-400 text-center text-sm\">
+  <footer class="py-10 px-6 bg-slate-950 text-slate-400 text-center text-sm">
     <p>A: Coachworks, 9-10 Charlotte Mews, W1T 4EF</p>
     <p>Registered Inspirus Capital Management Ltd, 13598574 in England and Wales.</p>
-    <p class=\"mt-2\">© <span id=\"year\"></span> Inspirus Capital Management. All rights reserved.</p>
+    <p class="mt-2">© <span id="year"></span> Inspirus Capital Management. All rights reserved.</p>
   </footer>
 
   <script>
-    // Year
+    // Year update
     const y = document.getElementById('year'); if (y) y.textContent = new Date().getFullYear();
 
-    // Reveal on scroll
+    // Reveal animation
     const io = new IntersectionObserver(es=>es.forEach(e=>{if(e.isIntersecting)e.target.classList.add('show')}),{threshold:.15});
     document.querySelectorAll('.reveal').forEach(el=>io.observe(el));
 
-    // Contact → n8n
-    const CONTACT_ENDPOINT = \"https://icm26.app.n8n.cloud/webhook/inspirus-contact\";
-    const form = document.getElementById(\"contactForm\");
-    const btn = document.getElementById(\"sendBtn\");
-    const msg = document.getElementById(\"statusMsg\");
+    // Contact form integration with n8n webhook
+    const CONTACT_ENDPOINT = "https://icm26.app.n8n.cloud/webhook/inspirus-contact";
+    const form = document.getElementById("contactForm");
+    const btn = document.getElementById("sendBtn");
+    const msg = document.getElementById("statusMsg");
 
-    form.addEventListener(\"submit\", async (e)=>{
+    form.addEventListener("submit", async (e)=>{
       e.preventDefault();
-      msg.textContent = \"Sending...\";
+      msg.textContent = "Sending...";
       btn.disabled = true;
       const data = Object.fromEntries(new FormData(form).entries());
       data.website = window.location.origin;
       data.ts = new Date().toISOString();
       try{
         const res = await fetch(CONTACT_ENDPOINT,{
-          method:\"POST\",
-          headers:{\"Content-Type\":\"application/json\"},
+          method:"POST",
+          headers:{"Content-Type":"application/json"},
           body:JSON.stringify(data)
         });
-        if(!res.ok) throw new Error(\"Network error\");
+        if(!res.ok) throw new Error("Network error");
         const j = await res.json();
-        if(j.ok){ msg.textContent = \"✅ Thank you — we’ve received your message.\"; form.reset(); }
-        else { throw new Error(\"Bad response\"); }
+        if(j.ok){ msg.textContent = "✅ Thank you — we’ve received your message."; form.reset(); }
+        else { throw new Error("Bad response"); }
       }catch(err){
-        msg.textContent = \"❌ There was an issue sending your message. Please try again.\";
+        msg.textContent = "❌ There was an issue sending your message. Please try again.";
       }finally{ btn.disabled = false; }
     });
   </script>
